# apps/api/src/core/payouts/dto/create-spi-payout.dto.ts
@@ -1,30 +1,0 @@
-import {
-  IsNotEmpty,
-  IsNumber,
-  IsOptional,
-  IsString,
-  IsUUID,
-  Min,
-} from 'class-validator';
-
-export class CreateSpiPayoutDto {
-  @IsNumber()
-  @Min(1)
-  amount: number;
-
-  @IsString()
-  @IsNotEmpty()
-  currency: string;
-
-  @IsUUID()
-  @IsNotEmpty()
-  payoutMethodId: string;
-
-  @IsUUID()
-  @IsOptional()
-  organizationId?: string;
-
-  @IsUUID()
-  @IsOptional()
-  merchantId?: string;
-}
